# MATH-458-ProjectNonLinearSystems

./: .gitignore  .gitmodules  AbstractSolver.h  CMakeLists.txt  ClassicChord.cpp  ClassicChord.h  Doxyfile  Newton.cpp  README.md  data.csv  functions.cpp  main.cpp
google_test/: .gitmodules  CMakeLists.txt  FixtureInterpreter.h  FixtureMethod.h  FixtureTest.h  functionTest.cpp  test.cc  test1.cc
project/: AbstractSolver.cpp  AbstractSolver.h  Bisection.cpp  Bisection.h  CMakeLists.txt  ClassicChord.cpp  ClassicChord.h  FixedPoint.cpp  FixedPoint.h  Newton.cpp  Newton.h  main.cpp  main_louis.cpp  run.cpp  runSystem.cpp
project/parser/: AbstractNode.h  AbstractToken.h  Builder.cpp  Builder.h  CMakeLists.txt  ExtrernalFunctionNode.h  NumberNode.h  OperatorNode.cpp  OperatorNode.h  Parser.cpp  Parser.h  Solver.h  Token.h  TokenContainer.h  TokenReader.cpp  TokenReader.h  TokenType.h  VariableNode.h  main_parser.cpp
project/readData/: AbstractInterpreterFunction.h  CMakeLists.txt  Data.h  InterpreterCodeC.cpp  InterpreterCodeC.h  InterpreterInputFunction.cpp  InterpreterInputFunction.h  InterpreterMathExpression.h  ReaderData.cpp  ReaderData.h  main_readData.cpp
project/readData/parser/: AbstractNode.h  AbstractToken.h  Builder.cpp  Builder.h  CMakeLists.txt  ExtrernalFunctionNode.h  FunctionNode.h  NumberNode.h  OperatorNode.cpp  OperatorNode.h  Parser.cpp  Parser.h  ParserException.h  Solver.h  Token.h  TokenContainer.h  TokenFunction.h  TokenReader.cpp  TokenReader.h  TokenType.h  VariableNode.h  main_parser.cpp
project/solverMethods/: AbstractSolver.h  Bisection.cpp  Bisection.h  CMakeLists.txt  ClassicChord.cpp  ClassicChord.h  ExceptionIterate.h  FixedPoint.cpp  FixedPoint.h  Newton.cpp  Newton.h  NewtonSystem.cpp  NewtonSystem.h
